Fix item comparison stat name overflow
This fixes #2024

--- a/src/app/compare/compare.scss
+++ b/src/app/compare/compare.scss
@@ -18,6 +18,7 @@ dim-compare {
     border-left: none;
     position: fixed;
     left: 1em;
+    min-width: 100px;
     width: 100px;
   }
   .compare-stat-label {
